[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Props/Mine.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/Flicker2.gd" type="Script" id=2]
[ext_resource path="res://Assets/Base/light_smol.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Mine" type="Area2D"]
collision_layer = 256
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BlowUp" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 3 )
color = Color( 0.921569, 0.643137, 0.109804, 1 )
script = ExtResource( 2 )
energy_min = 1.2
energy_max = 1.6
smoothing = 12

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Mine_body_entered"]
